Adapt HttpRequestHandlingMessagingGatewayTests to the latest SF
The `HttpHeader.set()` now calls `setHeader()` of the `HttpServletResponse`